created Dockerfile and profile docker